--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -14,6 +14,15 @@ html,body,#app{
 .mt15{
     margin-top: 15px;
 }
+.mt20{
+    margin-top: 20px;
+}
+.mt25{
+    margin-top: 25px;
+}
+.mt30{
+    margin-top: 30px;
+}
 .el-table th.gutter{
     display: table-cell!important;
 }
@@ -29,4 +38,7 @@ html,body,#app{
 }
 .demo-block .el-tag{
     margin: 10px 10px 10px 0;
+}
+.ql-editor{
+    min-height: 300px;
 }
